--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ html {
 *::before,
 *::after {
     box-sizing: inherit;
-  }
+}
 
 body {
     color: var(--primary-text-color);
@@ -75,7 +75,6 @@ img {
     display: flex;
     flex-direction: row;
     margin:0 auto;
- 
 }
 
 
@@ -126,19 +125,45 @@ img {
 .header-list:focus,
 .header-list.active { 
     color: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list:hover svg {
     fill: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list:focus svg {
     fill: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list:active svg {
     fill: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.header-list.active {
+    position: relative;
+    text-decoration: none;
+    
+}
+.header-list.active::after {
+    position: absolute;
+    content: '';
+    display:inline-block;
+    height: 4px;
+    width: 100%;
+    background: var(--accent-color);
+    left: -1px;
+    bottom: -28px;
+    border-radius: 2px;
+}
+
 .header-contacts {
     margin-left: 186px;
     padding: 0;
@@ -255,6 +280,8 @@ img {
 
 }
 
+/* -------------------------------INDEX btn modal window---------------- */
+
 .hero-btn {
     font-family: inherit;
     font-weight: bold;
@@ -275,6 +302,63 @@ img {
     padding-right: 32px;
     
 }
+
+.is-hidden {
+    pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+}
+.backdrop {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+.modal{
+    position: relative;
+    margin: 0;
+    padding: 0;
+    width: 528px;
+    height: 581px;
+    background-color: var(--primary-white-color);
+    box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2),
+        0 1px 1px 0 rgba(0, 0, 0, 0.14),
+        0 1px 3px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    z-index: 10;
+    transition: background-color 1s ease-in; 
+    top: 50%;
+    left: 50%;
+    transition-duration: 250ms;
+    transform: translate(-50%, -50%); 
+}
+
+.close-hero-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 1);
+}
+
+.close-hero-btn:hover,
+.close-hero-btn:hover svg {
+    cursor: pointer;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+} 
 
 /* ---------------------------about section2----------------- */
 
@@ -379,6 +463,43 @@ img {
     margin-right: 30px;
 }
 
+.trades-img {
+    display: block;
+    max-width: 100%;
+    height: 294px;
+}
+
+
+.trades-list li {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.trade-img-box {
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.trade-img-box > p {
+    position: absolute;
+    top: 224px;
+    margin: 0;
+    text-align: center;
+    padding-top: 27px;
+    background: rgba(47, 48, 58, 0.8);
+    height: 70px;
+    width: 370px;
+    
+
+    font-family: 'Roboto'sans-serif;
+    font-size: 14px;
+    line-height: 1.14;
+    color: var(--primary-white-color);
+    text-transform: uppercase;
+    font-weight: 700;
+}
 
 /*------------------------------INDEX section4 наша команда---------------------------------------------*/
 
@@ -479,6 +600,8 @@ img {
 .team-link:focus,
 .team-link:active {
     background-color: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-icon {
@@ -489,6 +612,8 @@ img {
 .team-link:focus .team-social-icon,
 .team-link:active .team-social-icon {
     fill: var(--primary-white-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -536,13 +661,19 @@ img {
 .clients-link:hover {
     border-color: var(--accent-color);
     fill: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover svg {
     fill: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:focus svg {
     fill: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list li:not(:last-of-type) {
@@ -621,6 +752,8 @@ img {
 .footer-link:focus,
 .footer-link:active { 
     color: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact {
@@ -677,6 +810,8 @@ img {
 .social-link:focus,
 .social-link:active {
     background-color: var(--accent-color);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*----------------------------PORTFOLIO контент----------------------------------*/
@@ -734,6 +869,8 @@ img {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12),
         0 1px 2px 0 rgba(0, 0, 0, 0.08),
         0 3px 1px 0 rgba(0, 0, 0, 0.01);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -754,6 +891,7 @@ img {
     margin:0 30px 30px 0;
     padding: 0 auto;
     width: 370px;
+    height: 404px;
 }
 
 .portfolio-items li:hover,
@@ -761,7 +899,46 @@ img {
     box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16),
         0 4px 4px 0 rgba(0, 0, 0, 0.06),
         0 1px 1px 0 rgb(0,0,0, 0.12);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.items-img-box {
+    position: relative;
+    overflow: hidden;
+    width: 370px;
+    height: 294px;
+}
+
+.portfolio-items li:hover .items-img-overlay {
+    transform: translateY(0);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.items-img-overlay {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.items-img-overlay p {
+    font-family: 'Roboto'sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+    color: var(--primary-white-color);
+    margin: 0 auto;
+    text-align: left;
+    padding: 63px 24px;
+}
+
 
 .items-sign {
     margin: 0 auto;
